--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -54,6 +54,13 @@ body {
   }
 }
 
+@media only screen and (max-width: 575px) {
+  ul.navbar-nav {
+    position: fixed;
+    text-align: left;
+  }
+}
+
 .nav-link {
   white-space: nowrap;
 }
