--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -100,6 +100,10 @@ h4 {
   width: max-content;
 }
 
+section {
+  padding-bottom: 2.5rem;
+}
+
 .experience-section .title {
   font-weight: bold;
 }
