--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -169,3 +169,13 @@ section .subtitle {
   width: 80px;
   z-index: -1;
 }
+
+#projects #project-cards {
+  position: relative;
+}
+
+#projects .card {
+  float: left;
+  margin-right: 20px;
+  width: 18rem !important;
+}
