--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -179,3 +179,9 @@ section .subtitle {
   margin-right: 20px;
   width: 18rem !important;
 }
+
+#footer div {
+  color: lightgray;
+  font-size: 12px;
+  text-align: center;
+}
