--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,7 +2,8 @@ $primary: #4169e1;
 $secondary: #40b726;
 
 @import '../../node_modules/bootstrap/scss/bootstrap.scss';
-@import '../../node_modules/bootstrap-icons/font/bootstrap-icons.css';
+// @import '../../node_modules/bootstrap-icons/font/bootstrap-icons.css';
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css");
 @import url("https://fonts.googleapis.com/icon?family=Dosis:400,300,700");
 @import url("https://fonts.googleapis.com/icon?family=Product+Sans:400,300,700");
 @import url("https://fonts.googleapis.com/icon?family=Roboto:wght@300;400;500&display=swap");
