Add some padding for project cards on smaller screen sizes.

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -177,6 +177,7 @@ section .subtitle {
 
 #projects .card {
   float: left;
+  margin-bottom: 20px;
   margin-right: 20px;
   width: 18rem !important;
 }
